about small fix

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,39 +2,51 @@
 
 <section class="pb-12">
     <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
-        <div class="bg-[url('./../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
+        <div class="bg-[url('./../img/about/about-banner.jpg')] max-w-none bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
         </div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 bottom-0 left-0"></div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 top-0 left-0 rotate-180"></div>
 
         <div class="container">
-            <div class="banner__item__head md:flex items-center">
-                <img src="./img/index/Budha-logo.svg" class="mb-7 md:mb-0" alt="logo">
-                <div class="con md:ml-10 ">
-                    <div class="relative px-5 py-3 w-fit md:text-center md:px-7">
-                        <img class="absolute top-0 left-0 -z-10 md:hidden" src="./img/index/bgd-decor.png" alt="bgd">
-                        <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available]" src="./img/index/bgd-decor-2.png" alt="bgd">
-                        <h2 class="text-sm text-white">
-                            Стоимость <br class="hidden md:block"> <span class="font-bold md:text-xl">от $70.000</span>
-                        </h2>
-                        <p class="text-xs text-slate-50 opacity-60 text-center">
-                            *включая налоги
-    
-                        </p>
+            <div>
+                <div>
+                    <div class="banner__item__head md:flex items-center">
+                        <img src="./img/index/Budha-logo.svg" class="mb-7 md:mb-0" alt="logo">
+                        <div class="con md:ml-10 ">
+                            <div class="relative px-5 py-3 w-fit md:text-center md:px-7">
+                                <img class="absolute top-0 left-0 -z-10 md:hidden" src="./img/index/bgd-decor.png" alt="bgd">
+                                <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available]" src="./img/index/bgd-decor-2.png" alt="bgd">
+                                <h2 class="text-sm text-white">
+                                    Стоимость <br class="hidden md:block"> <span class="font-bold md:text-xl">от $70.000</span>
+                                </h2>
+                                <p class="text-xs text-slate-50 opacity-60 text-center">
+                                    *включая налоги
+            
+                                </p>
+                            </div>
+                        </div>
                     </div>
+                    <h2 class="text-3xl text-white mt-5 md:text-6xl md:mt-12 md:max-w-[825px]">
+                        <span class="font-bold">
+                            OM | Club House
+                        </span>
+                    </h2>
+                    <p class="text-white text-sm max-w-64 md:max-w-[416px] md:text-base mt-3 md:mt-12">
+                        Премиум апартаменты в современном клубном
+                        доме. Погрузитесь в уникальную атмосферу роскоши
+                        и уюта в центре Чангу
+                    </p>
+                    <a href="#" class="w-full max-w-56 md:max-w-72 px-5 py-4 block text-sm md:text-base bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 my-10 transition-all md:mt-12 md:mb-52">
+                        Скачать презентацию
+                    </a>
+                </div>
+                <div>
+                    <button type="button" class="flex items-center gap-5 text-white text-sm">
+                        <img src="../img/icons/play-video-A.svg" class="max-w-[95px]" alt="ic">
+                        Посмотреть видео
+                    </button>
                 </div>
             </div>
-            <h2 class="text-3xl text-white mt-5 md:text-6xl md:mt-12 md:max-w-[825px]">
-                <span class="font-bold">
-                    BUDDHA | Club House
-                </span>
-            </h2>
-            <p class="text-white text-sm max-w-64 md:max-w-[416px] md:text-base mt-3 md:mt-12">
-                Апарт отель для инвестиций в сердце Чангу, район Берава. Топовая локация в 700 метрах от пляжа. Идеально для инвестиций. 
-            </p>
-            <a href="#" class="w-full max-w-56 md:max-w-72 px-5 py-4 block text-sm md:text-base bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 my-10 transition-all md:mt-12 md:mb-52">
-                Скачать презентацию
-            </a>
         </div>
     </div>
 </section>
