--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,7 +1,7 @@
 @@include('blocks/header.html')
 
 <section class="pb-12">
-    <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
+    <div class="swiper-slide pb-10 pt-36 lg:pt-[290px] relative overflow-hidden">
         <div
             class="bg-[url('./../img/about/about-banner.jpg')] max-w-none bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
         </div>
@@ -11,9 +11,17 @@
         <div class="container">
             <div class="md:flex md:justify-between md:gap-10">
                 <div>
-                    <div class="banner__item__head md:flex items-center">
-                        <img src="./img/index/Budha-logo.svg" class="mb-7 md:mb-0" alt="logo">
-                        <div class="con md:ml-10 ">
+                    <div class="banner__item__head flex flex-wrap items-center gap-[10px] md:gap-5">
+                        <div class="relative flex flex-col items-center justify-center w-full md:max-w-[186px] max-w-[141px] md:py-5 py-[15px]">
+                            <img class="absolute top-0 left-0 -z-10 md:min-h-[86px] min-h-[60px] md:max-w-[186px] max-w-[141px]" src="./img/icons/about-border-white.svg" alt="bgd">
+                            <span class="text-white text-xs md:text-sm">
+                                Срок сдачи
+                            </span>
+                            <p class="text-white text-base font-bold md:text-xl">
+                                лето 2025
+                            </p>
+                        </div>
+                        <div class="con order-1 md:order-none">
                             <div class="relative px-5 py-3 w-fit md:text-center md:px-7">
                                 <img class="absolute top-0 left-0 -z-10 md:hidden" src="./img/index/bgd-decor.png"
                                     alt="bgd">
@@ -28,6 +36,9 @@
 
                                 </p>
                             </div>
+                        </div>
+                        <div class="w-full h-[60px] max-w-[72px] md:max-w-[98px] md:h-[86px] bg-white flex items-center justify-center rounded-[8px] md:rounded-[15px]">
+                            <img src="./img/icons/live-ic.svg" class="max-w-[42px] md:max-w-[68px]" alt="ic">
                         </div>
                     </div>
                     <h2 class="text-3xl text-white mt-5 md:text-6xl md:mt-12 md:max-w-[825px]">
@@ -48,11 +59,11 @@
                 <div class="flex flex-col md:mt-10">
                     <button type="button"
                         class="flex items-center mb-10 gap-5 text-white text-sm md:text-base md:flex-col md:ml-auto">
-                        <img src="../img/icons/play-video-A.svg" class="max-w-[95px] md:max-w-[165px]" alt="ic">
+                        <img src="./img/icons/play-video-A.svg" class="max-w-[95px] md:max-w-[165px]" alt="ic">
                         Посмотреть видео
                     </button>
-                    <div class="flex gap-[10px] md:gap-5 md:mt-[100px]">
-                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px] hidden lg:block">
+                    <div class="flex gap-[10px] md:gap-5 md:mt-[100px] lg:grid lg:grid-cols-[repeat(3,_240px)]">
+                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px] hidden lg:block w-full">
                             <h3 class="text-white text-2xl font-bold mb-[10px] md:mb-[15px] md:text-[40px]">
                                 6
                             </h3>
@@ -60,18 +71,18 @@
                                 вилл
                             </p>
                         </div>
-                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px]">
+                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px] w-full lg:order-1">
                             <h3
                                 class="flex items-center gap-2 md:gap-[10px] text-blue-400 text-2xl font-bold mb-[10px] md:mb-[15px] md:text-[40px]">
                                 17%
-                                <img src="../img/icons/about-banner-A-ic.svg" class="max-w-[20px] md:max-w-[30px]"
+                                <img src="./img/icons/about-banner-A-ic.svg" class="max-w-[20px] md:max-w-[30px]"
                                     alt="ic">
                             </h3>
                             <p class="text-white text-sm md:text-base">
-                                прогнозируемый
+                                прогнозируемый <br class="md:hidden">ROI
                             </p>
                         </div>
-                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px]">
+                        <div class="pb-[15px] border-b border-whiteOp-300 md:pb-[30px] w-full">
                             <h3 class="text-white text-2xl font-bold mb-[10px] md:mb-[15px] md:text-[40px]">
                                 32
                             </h3>
