--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -4,13 +4,13 @@
     <div class="container mt-48">
         <div class="flex flex-wrap gap-3">
             <button class="white-button open-modal" data-modal="vacancy">
-                Отклик на вакансию
+                Vacancy
             </button>
             <button class="white-button open-modal" data-modal="contact">
                 Contact
             </button>
-            <button class="white-button open-modal" data-modal="present">
-                Получить презентацию
+            <button class="white-button open-modal" data-modal="Messenger">
+                Messenger
             </button>
             <button class="white-button">
                 Специальное предложение
