--- a/src/html/blocks/modals/contact.html
+++ b/src/html/blocks/modals/contact.html
@@ -15,7 +15,7 @@
                 </g>
             </svg>
         </div>
-        <div class="content__inner z-0 relative overflow-hidden p-5 lg:p-10 max-w-[600px]">
+        <div class="content__inner z-0 relative overflow-hidden p-5 lg:p-10 max-w-[600px] flex flex-col items-center justify-center h-full">
 
             <div class="absolute right-[-34px] -top-5 lg:top-5 z-0">
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
@@ -24,7 +24,7 @@
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
             </div>
 
-            <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_80px)] ml-[-40px] lg:mt-[-40px] lg:rounded-t-[20px] lg:mb-[40px] max-w-none mb-auto" alt="ph">
+            <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_40px)] absolute top-5 left-0 lg:static lg:w-[calc(100%_+_80px)]  ml-[-20px] mt-5 lg:ml-[0] lg:mt-[-40px] lg:rounded-t-[20px] lg:mb-[40px] max-w-none " alt="ph">
 
             <h2 class="text-white text-lg md:text-2xl font-bold text-center mb-5 ">
                 Оставьте контакт, чтобы получить презентацию по нашим проектам
