--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -9,7 +9,7 @@
             <button class="white-button open-modal" data-modal="contact">
                 Contact
             </button>
-            <button class="white-button open-modal" data-modal="Messenger">
+            <button class="white-button open-modal" data-modal="messenger">
                 Messenger
             </button>
             <button class="white-button">
@@ -25,11 +25,9 @@
     </div>
 </section>
 
-<!-- // -->
 @@include('blocks/modals/contact.html')
 
-<!-- // -->
-
+@@include('blocks/modals/messenger.html')
 
 @@include('blocks/modals/vacancy.html')
 
