--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -12,8 +12,8 @@
             <button class="white-button open-modal" data-modal="messenger">
                 Messenger
             </button>
-            <button class="white-button">
-                Специальное предложение
+            <button class="white-button open-modal" data-modal="special">
+                Special
             </button>
             <button class="white-button">
                 Специальное предложение 2
@@ -30,5 +30,7 @@
 @@include('blocks/modals/messenger.html')
 
 @@include('blocks/modals/vacancy.html')
+
+@@include('blocks/modals/special.html')
 
 @@include('blocks/footer.html')
