--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -15,11 +15,8 @@
             <button class="white-button open-modal" data-modal="special">
                 Special
             </button>
-            <button class="white-button">
-                Специальное предложение 2
-            </button>
-            <button class="white-button">
-                Календарь
+            <button class="white-button open-modal" data-modal="calendar">
+                Calendar
             </button>
         </div>
     </div>
@@ -32,5 +29,7 @@
 @@include('blocks/modals/vacancy.html')
 
 @@include('blocks/modals/special.html')
+
+@@include('blocks/modals/calendar.html')
 
 @@include('blocks/footer.html')
