--- a/src/html/blocks/modals/contact.html
+++ b/src/html/blocks/modals/contact.html
@@ -24,7 +24,11 @@
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
             </div>
 
-            <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_40px)] absolute top-5 left-0 lg:static lg:w-[calc(100%_+_80px)]  ml-[-20px] mt-5 lg:ml-[0] lg:mt-[-40px] lg:rounded-t-[20px] lg:mb-[40px] max-w-none " alt="ph">
+            <!-- <div class="absolute left-0 top-[50px]  z-0"> -->
+                <img src="../../../img/modals/modal-banner.jpg" class="w-[calc(100%_+_40px)] mb-auto lg:w-[calc(100%_+_80px)]  lg:mt-[-40px] lg:ml-[0] lg:rounded-t-[20px] max-w-none " alt="ph">
+            <!-- </div> -->
+
+            
 
             <h2 class="text-white text-lg md:text-2xl font-bold text-center mb-5 ">
                 Оставьте контакт, чтобы получить презентацию по нашим проектам
