--- a/src/html/blocks/modals/calendar.html
+++ b/src/html/blocks/modals/calendar.html
@@ -27,8 +27,8 @@
             
             <div class="md:flex">
                 <div class="pb-10 border-b border-whiteOp-300 mb-10 md:border-b-0 flex flex-col md:mb-0 md:bg-blue-600 md:p-10 md:pr-0 md:w-full">
-                    <div class="hidden md:block md:mb-[65px] pb-10 border-b border-whiteOp-300">
-                        <img src="../../../img/modals/modal-logo.svg" alt="ic logo">
+                    <div class="hidden md:block md:mb-[65px] pb-10 border-b border-whiteOp-300 md:-ml-10">
+                        <img src="./img/modals/modal-logo.svg" class="ml-10" alt="ic logo">
                     </div>
                     <h2 class="text-white text-lg md:text-[30px] md:leading-[30px] font-bold mb-5">
                         Живая встреча <br>
@@ -72,7 +72,7 @@
                         Часовой пояс
                     </h4>
                     <div class="flex items-center gap-[5px]">
-                        <img src="../../../img/icons/world-modal.svg" alt="ic">
+                        <img src="./img/icons/world-modal.svg" alt="ic">
                         <p class="text-white text-xs">
                             Восточноевропейское время
                         </p>
@@ -81,7 +81,7 @@
                                 <span class="text-white text-xs">
                                     (17:37)
                                 </span>
-                                <img src="../../../img/icons/arrow-down-modals.svg" alt="ic">
+                                <img src="./img/icons/arrow-down-modals.svg" alt="ic">
                             </div>
                             <div class="hidden">
                                 <span>
