--- a/src/html/blocks/modals/special.html
+++ b/src/html/blocks/modals/special.html
@@ -4,7 +4,7 @@
 
     </div>
     <div class="modal__content relative z-10 bg-blue-500 lg:rounded-[20px] h-full lg:h-auto flex items-center justify-center flex-col">
-        <div class="modal__cross modal__close absolute top-2 right-2 lg:-top-10 z-[1] lg:-right-4 cursor-pointer">
+        <div class="modal__cross modal__close absolute top-2 right-2 lg:-top-10 z-[1] lg:-right-10 cursor-pointer">
             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect class="hidden lg:block" opacity="0.2" x="0.5" y="0.5" width="29" height="29" rx="9.5" stroke="white" />
                 <g class="opacity-100 lg:opacity-50">
@@ -15,6 +15,8 @@
                 </g>
             </svg>
         </div>
+        <img src="./img/modals/modal-banner-2.jpg" class="mt-10 lg:-mt-10 w-full lg:rounded-t-[20px] max-w-none " alt="ph">
+
         <div class="content__inner z-0 relative overflow-hidden p-5 lg:p-10 max-w-[600px] flex flex-col items-center justify-center h-full">
 
             <div class="absolute right-[-34px] -top-5 lg:top-5 z-0">
@@ -23,8 +25,6 @@
             <div class="absolute left-[-34px] bottom-0 lg:bottom-[154px] z-0">
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
             </div>
-
-            <img src="../../../img/modals/modal-banner-2.jpg" class="w-[calc(100%_+_40px)]  lg:w-[calc(100%_+_80px)] mb-5 mt-10 lg:mt-[-40px] lg:ml-[0] lg:rounded-t-[20px] max-w-none " alt="ph">
 
             <h2 class="text-white text-lg md:text-2xl font-bold text-center mb-5 ">
                 Оставьте контакт, чтобы получить презентацию по нашим проектам
